--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.5",
     "classnames": "^2.3.2",
-    "eslint": "^8.42.0",
     "firebase": "^9.22.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -40,6 +38,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3"
+    "@testing-library/user-event": "^14.4.3",
+    "eslint": "^8.43.0"
   }
 }
