--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "react-icons": "^4.9.0",
     "react-particles": "^2.10.1",
     "react-router-dom": "^6.13.0",
-    "react-scripts": "^5.0.1",
     "sass": "^1.63.4",
     "tsparticles": "^2.10.1",
     "usehooks-ts": "^2.9.1"
@@ -39,6 +38,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "eslint": "^8.43.0"
+    "eslint": "^8.43.0",
+    "react-scripts": "^5.0.1"
   }
 }
