--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.1",
     "@mui/material": "^5.13.5",
     "classnames": "^2.3.2",
+    "fast-blurhash": "^1.1.2",
     "firebase": "^9.22.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
