--- a/package.json
+++ b/package.json
@@ -4,39 +4,27 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.10",
+    "@mui/material": "^5.14.12",
     "fast-blurhash": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-particles": "^2.12.2",
     "react-router-dom": "^6.16.0",
-    "sass": "^1.68.0",
+    "sass": "^1.69.1",
     "tsparticles": "^2.12.0",
     "usehooks-ts": "^2.9.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
-    "eslint": "^8.50.0",
-    "react-scripts": "^5.0.1"
+    "@vitejs/plugin-react": "^4.1.0",
+    "eslint": "^8.51.0",
+    "vite": "^4.4.11"
+  },
+  "scripts": {
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
