--- a/package.json
+++ b/package.json
@@ -5,27 +5,29 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.2",
+    "@mui/material": "^5.15.3",
     "@tsparticles/react": "^3.0.0",
     "fast-blurhash": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
-    "sass": "^1.69.6",
+    "sass": "^1.69.7",
     "tsparticles": "^3.0.3",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.6",
+    "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
     "vite": "^5.0.10"
   },
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint ."
   }
 }
