--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^6.21.1",
     "sass": "^1.69.7",
     "tsparticles": "^3.0.3",
-    "usehooks-ts": "^2.9.1"
+    "usehooks-ts": "^2.9.1",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.2.0",
@@ -22,6 +23,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
+    "globals": "^13.24.0",
     "vite": "^5.0.10"
   },
   "scripts": {
