--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "globals": "^14.0.0",
+    "prettier": "^3.2.5",
     "vite": "^5.1.3"
   },
   "scripts": {
