--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@testing-library/user-event": "^14.5.2",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "globals": "^14.0.0",
     "prettier": "^3.2.5",
