--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.11",
     "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.3.0",
     "fast-blurhash": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
     "sass": "^1.71.1",
-    "tsparticles": "^3.3.0",
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
