--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@mui/material": "^5.15.11",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.3.0",
-    "fast-blurhash": "^1.1.2",
+    "blurhash-gradients": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
