--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "sass": "^1.78.0",
+    "sass": "^1.79.1",
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
@@ -22,11 +22,13 @@
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import-x": "^4.2.1",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.36.1",
+    "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "prettier": "^3.3.3",
-    "vite": "^5.4.4"
+    "vite": "^5.4.6"
   },
   "scripts": {
     "start": "vite",
